crates/reap-pm-live/tests/ui/observation_key_cannot_be_replayed.stderr
error[E0061]: this function takes 4 arguments but 5 arguments were supplied
  --> tests/ui/observation_key_cannot_be_replayed.rs:11:5
   |
11 |     PmObservedEvent::enqueue_into(event, lanes, key, ingress, clock);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^               --- unexpected argument #3 of type `PmServiceKey`
   |
note: method defined here
  --> src/lanes.rs
   |
   |     fn enqueue_into(
   |        ^^^^^^^^^^^^
help: remove the extra argument
   |
11 -     PmObservedEvent::enqueue_into(event, lanes, key, ingress, clock);
11 +     PmObservedEvent::enqueue_into(event, lanes, ingress, clock);
   |
